Before Testing Recipe Comment Fix

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,5 +1,7 @@
-<!-- pass the recipe object to error page -->
 
+<!-- This partial is used for entry and editing of recipes -->
+
+<!-- pass the recipe object to error page -->
 <%= render 'shared/errors', obj: @recipe %>
 
 <!-- <div class="row"> -->
